Added functions lesson page.

--- a/bootstrap/css/fall2012.css
+++ b/bootstrap/css/fall2012.css
@@ -38,3 +38,10 @@ h1 , h2 , h3 , h4 , h5 , h6 {
 h2 , h3 , h4 {
 	color:#03C;
 }
+code.prettyprint {
+	margin: 5px;
+	display: inline-block;
+}
+#exerciseCarousel p {
+	font-weight: bold;
+}
