--- a/bootstrap/css/fall2012.css
+++ b/bootstrap/css/fall2012.css
@@ -5,22 +5,22 @@ body {
         padding-top: 50px;
         padding-bottom: 20px;
 }
-.hero-unit {
-padding: 20px;
-margin-bottom: 20px;
-background-color: #EEE;
+.callout {
+	background-color:#DDD;
 -webkit-border-radius: 6px;
 -moz-border-radius: 6px;
 border-radius: 6px;
+padding:10px;
 }
-.hero-unit h1 {
+.callout h1 {
 	font-size:200%;	
 }
-.hero-unit p {
+.callout p {
 	font-size:100%;
 }
 h1 , h2 , h3 , h4 , h5 , h6 {
 	letter-spacing:1.25px;
+	color:#05C;
 }
 .image-left {
 	float: left;
@@ -34,9 +34,6 @@ h1 , h2 , h3 , h4 , h5 , h6 {
 }
 .clearfloats {
 	clear: both;
-}
-h2 , h3 , h4 {
-	color:#03C;
 }
 code.prettyprint {
 	margin: 5px;
