--- a/includes/menu.html
+++ b/includes/menu.html
@@ -18,7 +18,7 @@
     <ul class="dropdown-menu">
       <li><a href="#"><i class="icon-book"></i> Javascript Fundamentals</a></li>
       <li><a href="#"><i class="icon-book"></i> Variables and Operators</a></li>
-      <li><a href="#"><i class="icon-book"></i> Functions</a></li>
+      <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
       <li class="divider"></li>
       <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>
     </ul>
