minor menu fixes

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Javascript &amp; JQuery CS 55.11</a>
+          <a class="brand" href="/~jperetz/fall2012/">Javascript &amp; JQuery CS 55.11</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/~jperetz/fall2012/">Syllabus</a></li>
