--- a/includes/menu.html
+++ b/includes/menu.html
@@ -11,7 +11,7 @@
             <ul class="nav">
               <li class="active"><a href="/~jperetz/fall2012/">Syllabus</a></li>
               <li class="dropdown" id="menu1">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       Lessons
       <b class="caret"></b>
     </a>
@@ -21,6 +21,30 @@
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
       <li class="divider"></li>
       <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>
+    </ul>
+  </li>
+  <li class="dropdown" id="menu2">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      Projects
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#"><i class="icon-pencil"></i> 1 - Dynamic Styles </a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 3 - </a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>
+    </ul>
+  </li>
+  <li class="dropdown" id="menu3">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      Student Gallery
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="#"><i class="icon-briefcase"></i> Irene </a></li>
+      <li><a href="#"><i class="icon-briefcase"></i> James</a></li>
+      <li><a href="#"><i class="icon-briefcase"></i> Lisa  </a></li>
+      <li><a href="#"><i class="icon-briefcase"></i>  Ron </a></li>
     </ul>
   </li>
             </ul>
