Added tools lesson pages to navbar.

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -17,6 +17,16 @@
     </a>
     <ul class="dropdown-menu">
       <li><a href="#"><i class="icon-book"></i> Javascript Fundamentals</a></li>
+      <li class="divider"></li>
+      <li><i class="icon-book"></i> Tools
+        <ul>
+            <li><a href="#"><i class="icon-book"></i>Consoles &amp; Debuggers</a></li>
+            <li><a href="/~jperetz/fall2012/lessons/tools-validators.html"><i class="icon-book"></i>Validators &amp; Style</a></li>
+            <li><a href="#"><i class="icon-book"></i>Code Sharing</a></li>
+            <li><a href="#"><i class="icon-book"></i>Education &amp; Information</a></li>
+        </ul>
+      </li>
+      <li class="divider"></li>
       <li><a href="#"><i class="icon-book"></i> Variables and Operators</a></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
       <li class="divider"></li>
