Added Tools: Consoles lesson page.

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -20,7 +20,7 @@
       <li class="divider"></li>
       <li><i class="icon-book"></i> Tools
         <ul>
-            <li><a href="#"><i class="icon-book"></i>Consoles &amp; Debuggers</a></li>
+            <li><a href="/~jperetz/fall2012/lessons/tools-consoles.html"><i class="icon-book"></i>Consoles &amp; Debuggers</a></li>
             <li><a href="/~jperetz/fall2012/lessons/tools-validators.html"><i class="icon-book"></i>Validators &amp; Style</a></li>
             <li><a href="#"><i class="icon-book"></i>Code Sharing</a></li>
             <li><a href="#"><i class="icon-book"></i>Education &amp; Information</a></li>
