--- a/includes/menu.html
+++ b/includes/menu.html
@@ -39,6 +39,18 @@
   </li>
   <li class="dropdown" id="menu3">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      Tools
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="/~jperetz/fall2012/lessons/tools-consoles.html"><i class="icon-pencil"></i>Browser Consoles </a></li>
+      <li><a href="/~jperetz/fall2012/lessons/tools-validators.html"><i class="icon-pencil"></i>Validators</a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 3 - </a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>
+    </ul>
+  </li>
+  <li class="dropdown" id="menu4">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       Student Gallery
       <b class="caret"></b>
     </a>
