Added Tools - Code Sharing lesson to menu.

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -45,7 +45,7 @@
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/lessons/tools-consoles.html"><i class="icon-pencil"></i>Browser Consoles </a></li>
       <li><a href="/~jperetz/fall2012/lessons/tools-validators.html"><i class="icon-pencil"></i>Validators</a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 3 - </a></li>
+      <li><a href="/~jperetz/fall2012/lessons/tools-sharing.html"><i class="icon-pencil"></i>Code Sharing</a></li>
       <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>
     </ul>
   </li>
