--- a/includes/menu.html
+++ b/includes/menu.html
@@ -18,10 +18,10 @@
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/lessons/fundamentals.html"><i class="icon-book"></i> Javascript Fundamentals</a></li>
         
-      <li><a href="#"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
+   <!--   <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
        <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>
-      <li><a href="#"><i class="icon-book"></i> Functions</a></li>
-      <li class="divider"></li>
+      <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
+      <li class="divider"></li>-->
      
     </ul>
   </li>
@@ -32,9 +32,9 @@
     </a>
     <ul class="dropdown-menu">
       <li><a href="#"><i class="icon-pencil"></i> 1 - Dynamic Styles </a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 3 - </a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>
+     <!-- <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 3 - Interactive Slideshow </a></li>
+      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>-->
     </ul>
   </li>
   <li class="dropdown" id="menu3">
@@ -43,10 +43,10 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="/~jperetz/fall2012/tools/consoles.html"><i class="icon-pencil"></i>Browser Consoles </a></li>
-      <li><a href="/~jperetz/fall2012/tools/validators.html"><i class="icon-pencil"></i>Validators</a></li>
-      <li><a href="/~jperetz/fall2012/tools/sharing.html"><i class="icon-pencil"></i>Code Sharing</a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>
+      <li><a href="/~jperetz/fall2012/tools/consoles.html"><i class="icon-wrench"></i>Browser Consoles </a></li>
+      <li><a href="/~jperetz/fall2012/tools/validators.html"><i class="icon-wrench"></i>Validators</a></li>
+    <!--  <li><a href="/~jperetz/fall2012/tools/sharing.html"><i class="icon-wrench"></i>Code Sharing</a></li>-->
+     
     </ul>
   </li>
   <li class="dropdown" id="menu4">
@@ -55,10 +55,10 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="#"><i class="icon-briefcase"></i> Irene </a></li>
-      <li><a href="#"><i class="icon-briefcase"></i> James</a></li>
-      <li><a href="#"><i class="icon-briefcase"></i> Lisa  </a></li>
-      <li><a href="#"><i class="icon-briefcase"></i>  Ron </a></li>
+     <!-- <li><a href="#"><i class="icon-user"></i> Irene </a></li>
+      <li><a href="#"><i class="icon-user"></i> James</a></li>
+      <li><a href="#"><i class="icon-user"></i> Lisa  </a></li>
+      <li><a href="#"><i class="icon-user"></i>  Ron </a></li>-->
     </ul>
   </li>
             </ul>
