--- a/includes/menu.html
+++ b/includes/menu.html
@@ -19,9 +19,9 @@
       <li><a href="/~jperetz/fall2012/lessons/fundamentals.html"><i class="icon-book"></i> Javascript Fundamentals</a></li>
         
    <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
-    <!--      <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>
+    <!--      <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>--><li class="divider"></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
-      <li class="divider"></li>-->
+      
      
     </ul>
   </li>
