--- a/includes/menu.html
+++ b/includes/menu.html
@@ -43,13 +43,24 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="/~jperetz/fall2012/tools/consoles.html"><i class="icon-wrench"></i>Browser Consoles </a></li>
-      <li><a href="/~jperetz/fall2012/tools/validators.html"><i class="icon-wrench"></i>Validators</a></li>
+      <li><a href="/~jperetz/fall2012/tools/consoles.html"><i class="icon-wrench"></i> Browser Consoles </a></li>
+      <li><a href="/~jperetz/fall2012/tools/validators.html"><i class="icon-wrench"></i> Validators</a></li>
     <!--  <li><a href="/~jperetz/fall2012/tools/sharing.html"><i class="icon-wrench"></i>Code Sharing</a></li>-->
      
     </ul>
   </li>
   <li class="dropdown" id="menu4">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+      Examples
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><a href="/~jperetz/fall2012/examples/rotate-page/"><i class="icon-eye-open"></i> Rotate Page</a></li>
+     
+     
+    </ul>
+  </li>
+  <li class="dropdown" id="menu5">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
       Student Gallery
       <b class="caret"></b>
