--- a/includes/menu.html
+++ b/includes/menu.html
@@ -19,7 +19,8 @@
       <li><a href="/~jperetz/fall2012/lessons/fundamentals.html"><i class="icon-book"></i> Javascript Fundamentals</a></li>
         
    <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
-    <!--      <li><a href="#"><i class="icon-book"></i> Loops and Conditionals</a></li>--><li class="divider"></li>
+         <li><a href="/~jperetz/fall2012/lessons/conditionals.html"><i class="icon-book"></i> Loops and Conditionals</a></li>
+         <li class="divider"></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
       
      
@@ -45,7 +46,8 @@
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/tools/consoles.html"><i class="icon-wrench"></i> Browser Consoles </a></li>
       <li><a href="/~jperetz/fall2012/tools/validators.html"><i class="icon-wrench"></i> Validators</a></li>
-    <!--  <li><a href="/~jperetz/fall2012/tools/sharing.html"><i class="icon-wrench"></i>Code Sharing</a></li>-->
+      <li><a href="/~jperetz/fall2012/tools/html5/"><i class="icon-wrench"></i> HTML5 Primer</a></li>
+    <li><a href="/~jperetz/fall2012/tools/sharing.html"><i class="icon-wrench"></i>Code Sharing</a></li>
      
     </ul>
   </li>
@@ -66,8 +68,8 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-     <!-- <li><a href="#"><i class="icon-user"></i> Irene </a></li>
-      <li><a href="#"><i class="icon-user"></i> James</a></li>
+      <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li>
+     <!-- <li><a href="#"><i class="icon-user"></i> James</a></li>
       <li><a href="#"><i class="icon-user"></i> Lisa  </a></li>
       <li><a href="#"><i class="icon-user"></i>  Ron </a></li>-->
     </ul>
