--- a/includes/menu.html
+++ b/includes/menu.html
@@ -67,11 +67,11 @@
       Student Gallery
       <b class="caret"></b>
     </a>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu"><li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li><li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li><li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li>
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li>
-     <!-- <li><a href="#"><i class="icon-user"></i> James</a></li>
-      <li><a href="#"><i class="icon-user"></i> Lisa  </a></li>
-      <li><a href="#"><i class="icon-user"></i>  Ron </a></li>-->
+     <!-- 
+      
+      -->
     </ul>
   </li>
             </ul>
