Project 1 is posted

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -32,7 +32,7 @@
       <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-      <li><a href="#"><i class="icon-pencil"></i> 1 - Dynamic Styles </a></li>
+      <li><a href="/~jperetz/fall2012/projects/programming/"><i class="icon-pencil"></i> 1 - Javascript Programming with an HTML5 Grid </a></li>
      <!-- <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
       <li><a href="#"><i class="icon-pencil"></i> 3 - Interactive Slideshow </a></li>
       <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>-->
