updates to student gallery and homepage

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -67,8 +67,14 @@
       Student Gallery
       <b class="caret"></b>
     </a>
-    <ul class="dropdown-menu"><li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li><li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li><li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li>
-      <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li>
+   
+    
+    
+    <ul class="dropdown-menu"><li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
+    <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
+    <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
+    <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
+      <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
      <!-- 
       
       -->
