--- a/includes/menu.html
+++ b/includes/menu.html
@@ -73,8 +73,10 @@
     <ul class="dropdown-menu"><li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
     <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
     <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
+  <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
     <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
+     <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve </a></li>
      <!-- 
       
       -->
