--- a/includes/menu.html
+++ b/includes/menu.html
@@ -70,7 +70,9 @@
    
     
     
-    <ul class="dropdown-menu"><li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
+    <ul class="dropdown-menu">
+    <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
+    <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
     <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
     <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
   <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
