additions to student gallery

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -78,6 +78,8 @@
     <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
     <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> 
     <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
+    <li><a href="http://student.santarosa.edu/~lbailey2/CS5011/"><i class="icon-user"></i> Lisa B.</a></li>
+    <li><a href="http://student.santarosa.edu/~ldavis/CS55.11_javascript/aboutme2.html"><i class="icon-user"></i> Lisa D.</a></li>
     <li><a href="http://student.santarosa.edu/~mogilvie/javascript/index.html"><i class="icon-user"></i> Margaret</a></li>
   <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
     <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
@@ -85,6 +87,7 @@
       <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
      <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve </a></li>
+      <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Steve </a></li>
      <!-- 
       
       -->
