--- a/includes/menu.html
+++ b/includes/menu.html
@@ -74,7 +74,9 @@
     <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
     <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
     <li><a href="http://www.calwalker.com/index.html"><i class="icon-user"></i> Calvin</a></li>
+    <li><a href="http://busstudent.santarosa.edu/~dasker/Project1/"><i class="icon-user"></i>  Doug</a></li>
     <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
+    <li><a href="http://student.santarosa.edu/~jfaison/intro.html"><i class="icon-user"></i>  Jere</a></li>
     <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
     <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> 
     <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
@@ -86,8 +88,9 @@
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
       <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
+      <li><a href=" http://student.santarosa.edu/~spen/CS55.11/"><i class="icon-user"></i> Sopheap </a></li>
      <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve </a></li>
-      <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Steve </a></li>
+      <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Suzanne </a></li>
      <!-- 
       
       -->
