--- a/includes/menu.html
+++ b/includes/menu.html
@@ -20,6 +20,7 @@
         
    <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
          <li><a href="/~jperetz/fall2012/lessons/conditionals.html"><i class="icon-book"></i> Loops and Conditionals</a></li>
+         <li><a href="/~jperetz/fall2012/lessons/data-types.html"><i class="icon-book"></i>  Numbers, Strings and Dates</a></li>
          <li class="divider"></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
