--- a/includes/menu.html
+++ b/includes/menu.html
@@ -21,6 +21,7 @@
    <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
          <li><a href="/~jperetz/fall2012/lessons/conditionals.html"><i class="icon-book"></i> Loops and Conditionals</a></li>
          <li><a href="/~jperetz/fall2012/lessons/data-types.html"><i class="icon-book"></i>  Numbers, Strings and Dates</a></li>
+         <li><a href="/~jperetz/fall2012/lessons/events.html">Events</a></li>
          <li class="divider"></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
@@ -35,6 +36,7 @@
     </a>
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/projects/programming/"><i class="icon-pencil"></i> 1 - Javascript Programming with an HTML5 Grid </a></li>
+       <li><a href="/~jperetz/fall2012/projects/naptime/"><i class="icon-pencil"></i> 2 - Programming a Timer with an HTML5 Audio Player </a></li>
      <!-- <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
       <li><a href="#"><i class="icon-pencil"></i> 3 - Interactive Slideshow </a></li>
       <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>-->
@@ -76,8 +78,10 @@
     <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
     <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
     <li><a href="http://www.calwalker.com/index.html"><i class="icon-user"></i> Calvin</a></li>
+    <li><a href="http://student.santarosa.edu/~cwhitehe/js/index.html"><i class="icon-user"></i> Clark</a></li>
     <li><a href="http://student.santarosa.edu/~dlangdon/js/homework.html"><i class="icon-user"></i> DiAnn</a></li>
     <li><a href="http://busstudent.santarosa.edu/~dasker/Project1/"><i class="icon-user"></i>  Doug</a></li>
+     <li><a href="http://www.hostboxter.com/proofs/dustinCooper/CS55.11/"><i class="icon-user"></i>  Dustin</a></li>
     <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
     <li><a href="http://student.santarosa.edu/~jfaison/intro.html"><i class="icon-user"></i>  Jere</a></li>
     <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
@@ -90,6 +94,7 @@
   <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
     <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
     <li><a href="http://student.santarosa.edu/~mlimoncz/javascript/"><i class="icon-user"></i> Miranda</a></li>
+    <li><a href="http://student.santarosa.edu/~parchiab/cs55_11/index.html"><i class="icon-user"></i> Paul</a></li>
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
       <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
