--- a/includes/menu.html
+++ b/includes/menu.html
@@ -21,7 +21,7 @@
    <li><a href="/~jperetz/fall2012/lessons/expressions.html"><i class="icon-book"></i> Variables, Expressions  and Operators</a></li>
          <li><a href="/~jperetz/fall2012/lessons/conditionals.html"><i class="icon-book"></i> Loops and Conditionals</a></li>
          <li><a href="/~jperetz/fall2012/lessons/data-types.html"><i class="icon-book"></i>  Numbers, Strings and Dates</a></li>
-         <li><a href="/~jperetz/fall2012/lessons/events.html">Events</a></li>
+         <li><a href="/~jperetz/fall2012/lessons/events.html"><i class="icon-book"></i> Events</a></li>
          <li class="divider"></li>
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
@@ -91,10 +91,12 @@
     <li><a href="http://student.santarosa.edu/~lbailey2/CS5011/"><i class="icon-user"></i> Lisa B.</a></li>
     <li><a href="http://student.santarosa.edu/~ldavis/CS55.11_javascript/aboutme2.html"><i class="icon-user"></i> Lisa D.</a></li>
     <li><a href="http://student.santarosa.edu/~mogilvie/javascript/index.html"><i class="icon-user"></i> Margaret</a></li>
+    <li><a href="http://student.santarosa.edu/~mcovert/2012fall/javascript/"><i class="icon-user"></i> Marc</a></li>
   <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
     <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
     <li><a href="http://student.santarosa.edu/~mlimoncz/javascript/"><i class="icon-user"></i> Miranda</a></li>
     <li><a href="http://student.santarosa.edu/~parchiab/cs55_11/index.html"><i class="icon-user"></i> Paul</a></li>
+    <li><a href="http://student.santarosa.edu/~rcapistr/javascript/assignments.html"><i class="icon-user"></i> Ron</a></li>
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
       <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
