--- a/includes/menu.html
+++ b/includes/menu.html
@@ -86,6 +86,7 @@
     <li><a href="http://student.santarosa.edu/~jfaison/intro.html"><i class="icon-user"></i>  Jere</a></li>
     <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
     <li><a href="http://student.santarosa.edu/~jclark2/javascript/index.php"><i class="icon-user"></i>  Joan</a></li>
+    <li><a href="http://student.santarosa.edu/~josman/js/index.html"><i class="icon-user"></i> Jon</a></li>
     <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li> 
     <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
     <li><a href="http://student.santarosa.edu/~lbailey2/CS5011/"><i class="icon-user"></i> Lisa B.</a></li>
