--- a/includes/menu.html
+++ b/includes/menu.html
@@ -76,13 +76,15 @@
     
     <ul class="dropdown-menu">
     <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
+    <li><a href="http://student.santarosa.edu/~apowers/"><i class="icon-user"></i> Angie</a></li>
     <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
-    <li><a href="http://www.calwalker.com/index.html"><i class="icon-user"></i> Calvin</a></li>
+    <li><a href="http://www.calwalker.com/Assignment1/index.html"><i class="icon-user"></i> Calvin</a></li>
     <li><a href="http://student.santarosa.edu/~cwhitehe/js/index.html"><i class="icon-user"></i> Clark</a></li>
     <li><a href="http://student.santarosa.edu/~dlangdon/js/homework.html"><i class="icon-user"></i> DiAnn</a></li>
     <li><a href="http://busstudent.santarosa.edu/~dasker/Project1/"><i class="icon-user"></i>  Doug</a></li>
      <li><a href="http://www.hostboxter.com/proofs/dustinCooper/CS55.11/"><i class="icon-user"></i>  Dustin</a></li>
     <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
+    <li><a href="http://student.santarosa.edu/~ialameid/main/main.html"><i class="icon-user"></i>  Irene</a></li>
     <li><a href="http://student.santarosa.edu/~jfaison/intro.html"><i class="icon-user"></i>  Jere</a></li>
     <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
     <li><a href="http://student.santarosa.edu/~jclark2/javascript/index.php"><i class="icon-user"></i>  Joan</a></li>
@@ -103,7 +105,8 @@
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
      <li><a href="http://student.santarosa.edu/~syam/2012fall/cs5511/"><i class="icon-user"></i>  Shannon </a></li>
       <li><a href=" http://student.santarosa.edu/~spen/CS55.11/"><i class="icon-user"></i> Sopheap </a></li>
-     <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve </a></li>
+      <li><a href="http://student.santarosa.edu/~savery/js/"><i class="icon-user"></i> Steve A</a></li>
+     <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve K</a></li>
       <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Suzanne </a></li>
      <!-- 
       
