--- a/includes/menu.html
+++ b/includes/menu.html
@@ -22,10 +22,10 @@
          <li><a href="/~jperetz/fall2012/lessons/conditionals.html"><i class="icon-book"></i> Loops and Conditionals</a></li>
          <li><a href="/~jperetz/fall2012/lessons/data-types.html"><i class="icon-book"></i>  Numbers, Strings and Dates</a></li>
          <li><a href="/~jperetz/fall2012/lessons/events.html"><i class="icon-book"></i> Events</a></li>
-         <li class="divider"></li>
+       
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
-      
+      <li><a href="/~jperetz/fall2012/lessons/arrays.html"><i class="icon-book"></i> Arrays</a></li>
      
     </ul>
   </li>
