menu and homepage updates

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -62,6 +62,7 @@
     </a>
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/examples/rotate-page/"><i class="icon-eye-open"></i> Rotate Page</a></li>
+      <li><a href="/~jperetz/fall2012/examples/event-target.html"><i class="icon-eye-open"></i> Event Target</a></li>
      
      
     </ul>
