Completed Constructor Functions lesson.
Added Constructor Functions and Objects lessons to menu.

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -25,6 +25,8 @@
        
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
+       <li><a href="/~jperetz/fall2012/lessons/objects.html"><i class="icon-book"></i> Objects</a></li>
+       <li><a href="/~jperetz/fall2012/lessons/constructor-functions.html"><i class="icon-book"></i> Constructo Functions</a></li>
       <li><a href="/~jperetz/fall2012/lessons/arrays.html"><i class="icon-book"></i> Arrays</a></li>
      
     </ul>
