--- a/includes/menu.html
+++ b/includes/menu.html
@@ -24,16 +24,11 @@
         
        
       <li><a href="/~jperetz/fall2012/lessons/functions.html"><i class="icon-book"></i> Functions</a></li>
-<<<<<<< HEAD
+
        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
-       <li><a href="/~jperetz/fall2012/lessons/objects.html"><i class="icon-book"></i> Objects</a></li>
-       <li><a href="/~jperetz/fall2012/lessons/constructor-functions.html"><i class="icon-book"></i> Constructo Functions</a></li>
-=======
-        <li><a href="/~jperetz/fall2012/lessons/parameters-and-scope.html"><i class="icon-book"></i> Scope &amp; Parameters</a></li>
        <li><a href="/~jperetz/fall2012/lessons/events.html"><i class="icon-book"></i> Events</a></li>
        <li><a href="/~jperetz/fall2012/lessons/objects.html"><i class="icon-book"></i> Objects</a></li>
-     
->>>>>>> menu and homepage updates
+       <li><a href="/~jperetz/fall2012/lessons/constructor-functions.html"><i class="icon-book"></i> Constructor Functions</a></li>
       <li><a href="/~jperetz/fall2012/lessons/arrays.html"><i class="icon-book"></i> Arrays</a></li>
      
     </ul>
