finshed dom lesson working on proj 3

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -29,6 +29,7 @@
        <li><a href="/~jperetz/fall2012/lessons/events.html"><i class="icon-book"></i> Events</a></li>
        <li><a href="/~jperetz/fall2012/lessons/objects.html"><i class="icon-book"></i> Objects</a></li>
        <li><a href="/~jperetz/fall2012/lessons/constructor-functions.html"><i class="icon-book"></i> Constructor Functions</a></li>
+          <li><a href="/~jperetz/fall2012/lessons/document-window-objects.html"><i class="icon-book"></i> Document and Window Objects</a></li>
       <li><a href="/~jperetz/fall2012/lessons/arrays.html"><i class="icon-book"></i> Arrays</a></li>
      
     </ul>
