--- a/includes/menu.html
+++ b/includes/menu.html
@@ -42,9 +42,9 @@
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/projects/programming/"><i class="icon-pencil"></i> 1 - Javascript Programming with an HTML5 Grid </a></li>
        <li><a href="/~jperetz/fall2012/projects/naptime/"><i class="icon-pencil"></i> 2 - Programming a Timer with an HTML5 Audio Player </a></li>
-     <!-- <li><a href="#"><i class="icon-pencil"></i> 2 - Digital Clock</a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 3 - Interactive Slideshow </a></li>
-      <li><a href="#"><i class="icon-pencil"></i> 4 -</a></li>-->
+     
+      <li><a href="/~jperetz/fall2012/projects/slideshow/"><i class="icon-pencil"></i> 3 - Plug and Play Javascript Slideshow </a></li>
+     
     </ul>
   </li>
   <li class="dropdown" id="menu3">
