--- a/includes/menu.html
+++ b/includes/menu.html
@@ -44,7 +44,7 @@
        <li><a href="/~jperetz/fall2012/projects/naptime/"><i class="icon-pencil"></i> 2 - Programming a Timer with an HTML5 Audio Player </a></li>
      
       <li><a href="/~jperetz/fall2012/projects/slideshow/"><i class="icon-pencil"></i> 3 - Plug and Play Javascript Slideshow </a></li>
-     
+      <li><a href="/~jperetz/fall2012/projects/calculator/"><i class="icon-pencil"></i> 4 - Calculator Widget </a></li>
     </ul>
   </li>
   <li class="dropdown" id="menu3">
