Completed JSON lesson.

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -31,7 +31,7 @@
        <li><a href="/~jperetz/fall2012/lessons/constructor-functions.html"><i class="icon-book"></i> Constructor Functions</a></li>
           <li><a href="/~jperetz/fall2012/lessons/document-window-objects.html"><i class="icon-book"></i> Document and Window Objects</a></li>
       <li><a href="/~jperetz/fall2012/lessons/arrays.html"><i class="icon-book"></i> Arrays</a></li>
-     
+      <li><a href="/~jperetz/fall2012/lessons/json.html"><i class="icon-book"></i> JSON</a></li>
     </ul>
   </li>
   <li class="dropdown" id="menu2">
