--- a/examples/wordcount/wordcount.css
+++ b/examples/wordcount/wordcount.css
@@ -2,12 +2,12 @@
 /* CSS Document */
 
 .btn {
- font-size:250%;
- width"200px;
- height:100px;
+ font-size:150%;
+ width:100px;
+ height:50px;
  padding-left:10px;
 }
 .lead {
-	font-size:350%;
+	font-size:150%;
 	padding: 30px 10px;
 }
