--- a/includes/menu.html
+++ b/includes/menu.html
@@ -47,6 +47,7 @@
       <li><a href="/~jperetz/fall2012/projects/slideshow/"><i class="icon-pencil"></i> 3 - Plug and Play Javascript Slideshow </a></li>
       <li><a href="/~jperetz/fall2012/projects/calculator/"><i class="icon-pencil"></i> 4 - Calculator Widget </a></li>
         <li><a href="/~jperetz/fall2012/projects/forms/"><i class="icon-pencil"></i> 5 - Forms and Data </a></li>
+          <li><a href="/~jperetz/fall2012/projects/wordcount/"><i class="icon-pencil"></i> 6 - Keyword Search and Data Visualization </a></li>
     </ul>
   </li>
   <li class="dropdown" id="menu3">
