syncing prior to project 8 mobile

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -71,6 +71,7 @@
     <ul class="dropdown-menu">
       <li><a href="/~jperetz/fall2012/examples/rotate-page/"><i class="icon-eye-open"></i> Rotate Page</a></li>
       <li><a href="/~jperetz/fall2012/examples/event-target.html"><i class="icon-eye-open"></i> Event Target</a></li>
+      <li><a href="/~jperetz/fall2012/examples/metasequoia-112012/"><i class="icon-eye-open"></i> Metasequoia Page from November 20</a></li>
      
      
     </ul>
