added some example projects

--- a/includes/menu.html
+++ b/includes/menu.html
@@ -48,6 +48,9 @@
       <li><a href="/~jperetz/fall2012/projects/calculator/"><i class="icon-pencil"></i> 4 - Calculator Widget </a></li>
         <li><a href="/~jperetz/fall2012/projects/forms/"><i class="icon-pencil"></i> 5 - Forms and Data </a></li>
           <li><a href="/~jperetz/fall2012/projects/wordcount/"><i class="icon-pencil"></i> 6 - Keyword Search and Data Visualization </a></li>
+            <li><a href="/~jperetz/fall2012/projects/mobile/"><i class="icon-pencil"></i> 7 -JQuery Mobile </a></li>
+             <li><a href="/~jperetz/fall2012/projects/mobile2/"><i class="icon-pencil"></i> 7 B-JQuery Mobile Flickr Search SlideShow</a></li>
+              <li><a href="/~jperetz/fall2012/projects/final/"><i class="icon-pencil"></i> Final Project</a></li>
     </ul>
   </li>
   <li class="dropdown" id="menu3">
